Apply suggestions from code review
Signed-off-by: Kjeld Schouten <info@kjeldschouten.nl>

--- a/charts/incubator/riven/values.yaml
+++ b/charts/incubator/riven/values.yaml
@@ -1,10 +1,10 @@
 image:
-  repository: ipromknight/riven
+  repository: spoked/riven
   pullPolicy: IfNotPresent
   tag: v0.15.0
 
 frontendImage:
-  repository: ipromknight/riven
+  repository: spoked/riven-frontend
   pullPolicy: IfNotPresent
   tag: v0.13.1
 
