--- a/charts/incubator/zilean/values.yaml
+++ b/charts/incubator/zilean/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ipromknight/zilean
+  repository: ghcr.io/elfhosted/zilean
   pullPolicy: IfNotPresent
-  tag: v2.0.0
+  tag: v2.0.0@sha256:343e425e36814d431ae2720df6f9ced67a5ff48e791e5cca8c4c90c00e6f6900
 
 service:
   main:
