--- a/charts/incubator/comet/values.yaml
+++ b/charts/incubator/comet/values.yaml
@@ -20,7 +20,7 @@ workload:
             ADDON_ID: comet.selfhosted.org
             ADDON_NAME: Comet | Selfhosted
             ZILEAN_URL: None
-            ZILEAN_TAKE_FIRST: 500 # only change it if you know what it is
+            ZILEAN_TAKE_FIRST: 500
             INDEXER_MANAGER_TYPE: None
             INDEXER_MANAGER_TIMEOUT: "30"
             # INDEXER_MANAGER_URL: http://jackett:9117
@@ -29,7 +29,7 @@ workload:
             GET_TORRENT_TIMEOUT: "5"
             # DEBRID_PROXY_URL: http://127.0.0.1:1080
             FASTAPI_WORKERS: "1"
-            SCRAPE_TORRENTIO: False
+            SCRAPE_TORRENTIO: "False"
             DATABASE_TYPE: postgresql
             DATABASE_URL: '{{ printf "%s:%s@%s:5432" .Values.cnpg.main.user  .Values.cnpg.main.creds.password (.Values.cnpg.main.creds.host | trimAll "\"") }}'
 
