--- a/charts/stable/immich/values.yaml
+++ b/charts/stable/immich/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: altran1502/immich-server
+  repository: ghcr.io/immich-app/immich-server
   tag: v1.118.0@sha256:3c4250f80ef0c38b70fb947c2c6688e07c737d2409c1d715a2f03fb7d75ba036
   pullPolicy: IfNotPresent
 
