--- a/charts/stable/immich/values.yaml
+++ b/charts/stable/immich/values.yaml
@@ -4,7 +4,7 @@ image:
   pullPolicy: IfNotPresent
 
 mlImage:
-  repository: altran1502/immich-machine-learning
+  repository: ghcr.io/immich-app/immich-machine-learning
   pullPolicy: IfNotPresent
   tag: v1.118.0@sha256:1eb7b45d222d49d33acfeae0ca612e64e838bde1bd142830b6160e358edef815
 
