--- a/charts/stable/immich/values.yaml
+++ b/charts/stable/immich/values.yaml
@@ -9,7 +9,7 @@ mlImage:
   tag: v1.118.0@sha256:1eb7b45d222d49d33acfeae0ca612e64e838bde1bd142830b6160e358edef815
 
 mlCudaImage:
-  repository: altran1502/immich-machine-learning
+  repository: ghcr.io/immich-app/immich-machine-learning
   pullPolicy: IfNotPresent
   tag: v1.118.0-cuda@sha256:e10df211724994e5bd6cf560c940a520cc5a7d272d91c4727bb168bac3da15c5
 
