--- a/charts/stable/immich/values.yaml
+++ b/charts/stable/immich/values.yaml
@@ -14,7 +14,7 @@ mlCudaImage:
   tag: v1.118.0-cuda@sha256:e10df211724994e5bd6cf560c940a520cc5a7d272d91c4727bb168bac3da15c5
 
 mlOpenvinoImage:
-  repository: altran1502/immich-machine-learning
+  repository: ghcr.io/immich-app/immich-machine-learning
   pullPolicy: IfNotPresent
   tag: v1.118.0-openvino@sha256:6dc6feee3211c4b271aabd280005b30c7cba2f93703ed5c127df310dedafe8b7
 
