--- a/charts/incubator/riven/values.yaml
+++ b/charts/incubator/riven/values.yaml
@@ -77,7 +77,7 @@ workload:
             startup:
               port: 3000
           env:
-            ORIGIN: "http://localhost:3000"
+            # ORIGIN: "http://localhost:3000"
             BACKEND_URL: "http://localhost:3001"
             DIALECT: "postgres"
             DATABASE_URL: '{{ printf "postgresql://%s:%s@%s.%s/%s" .Values.cnpg.main.user .Values.cnpg.main.creds.password (.Values.cnpg.main.creds.host | trimAll "\"") .Release.Namespace .Values.cnpg.main.database }}'
