fix homepage widget

--- a/charts/stable/immich/values.yaml
+++ b/charts/stable/immich/values.yaml
@@ -148,3 +148,10 @@ redis:
 portal:
   open:
     enabled: true
+
+ingress:
+  main:
+    integrations:
+      homepage:
+        widget:
+          version: 2
