--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,5 +53,5 @@ repos:
     rev: v3.1.0
     hooks:
       - id: prettier
-        exclude: (^archive|templates\/.*|crds\/.*|README.md|CHANGELOG.md|questions.yaml|devcontainer.json)
+        exclude: (^archive|templates\/.*|crds\/.*|README.md|CHANGELOG.md|questions.yaml|devcontainer.json|^clustertool)
         files: \.(js|ts|jsx|tsx|css|less|html|json|markdown|md|yaml|yml)$
