--- a/.github/renovate/updates/lockfile.json5
+++ b/.github/renovate/updates/lockfile.json5
@@ -3,7 +3,8 @@
   "packageRules": [
     {
       matchUpdateTypes: ["lockfile"],
-      automerge: true
+      automerge: true,
+      "autoApprove": true
     }
   ],
   "ignore": [
