--- a/.github/renovate/basics/commitMessage.json5
+++ b/.github/renovate/basics/commitMessage.json5
@@ -3,6 +3,7 @@
   "commitMessageTopic": "{{depName}}",
   "commitMessageExtra": "{{currentVersion}} → {{newVersion}}",
   "commitMessageSuffix": "By Renovate",
+  "prefix": "chore(deps)",
   "packageRules": [
     {
       "matchDatasources": ["helm"],
@@ -10,7 +11,7 @@
     },
     {
       "matchDatasources": ["docker", "helm-values"],
-      "commitMessageTopic": "image {{depName}}"
+      "commitMessageTopic": "OCI-image {{depName}}"
     }
   ]
 }
