--- a/.github/renovate/main.json5
+++ b/.github/renovate/main.json5
@@ -2,6 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "rebaseWhen": "conflicted",
   "prConcurrentLimit": 150,
+  "automergeType": "pr",
   "pinDigests": true,
     "semanticCommits": "enabled",
   "dependencyDashboard": true,
