--- a/.github/workflows/clustertool.tests.yaml
+++ b/.github/workflows/clustertool.tests.yaml
@@ -1,20 +1,20 @@
-name: clustertool-test
+name: clustertool-go-tests
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
 on:
-  push:
-    branches:
-      - main
-    tags:
-      - "*"
-    paths:
-      - 'main.go'
-      - 'go.mod'
-      - 'go.sum'
-      - 'pkg/**'
-      - 'cmd/**'
-      - 'clustertool/**'
-      - ".github/workflows/clsutertool.test.yaml"
+  # push:
+  #   branches:
+  #     - main
+  #   tags:
+  #     - "*"
+  #   paths:
+  #     - 'main.go'
+  #     - 'go.mod'
+  #     - 'go.sum'
+  #     - 'pkg/**'
+  #     - 'cmd/**'
+  #     - 'clustertool/**'
+  #     - ".github/workflows/clsutertool.test.yaml"
   pull_request:
     branches:
       - main
