--- a/.github/renovate/main.json5
+++ b/.github/renovate/main.json5
@@ -49,6 +49,7 @@
     "**/archive/**",
     "**/misc/**",
     "**/archive/**",
-    "**/resources/**"
+    "**/resources/**",
+    "**common/test-chart/tests/**"
     ],
 }
