more renovate polish

--- a/.github/renovate/kinds/astro.json5
+++ b/.github/renovate/kinds/astro.json5
@@ -11,10 +11,11 @@
     "ignore": [
       // Specify any dependencies or versions to ignore
     ],
-    "semanticCommitScope": "website"
-  },
+    "semanticCommitScope": "website",
   "ignoreDeps": [
     // List any dependencies to ignore globally if needed
   ],
   "requiredStatusChecks": null
+  },
+
 }
