--- a/.github/renovate/kinds/go.json5
+++ b/.github/renovate/kinds/go.json5
@@ -11,8 +11,7 @@
     "ignore": [
       // Specify any modules or versions to ignore
     ],
-    "semanticCommitScope": "go"
-  },
+    "semanticCommitScope": "go",
   "branchPrefix": "go-",
   "ignoreDeps": [
     // List any dependencies to ignore globally if needed
@@ -25,4 +24,6 @@
     }
   ],
   "requiredStatusChecks": null,
+  },
+
 }
