--- a/.github/renovate/main.json5
+++ b/.github/renovate/main.json5
@@ -50,6 +50,7 @@
     "**/misc/**",
     "**/archive/**",
     "**/resources/**",
-    "**common/test-chart/tests/**"
+    "**common/test-chart/tests/**",
+    "charts/library/common/test-chart/tests/**"
     ],
 }
