--- a/.github/renovate/kinds/flux.json5
+++ b/.github/renovate/kinds/flux.json5
@@ -10,11 +10,12 @@
     "enabled": true, // Enable Flux updates
     "updateTypes": ["major", "minor", "patch"], // Allow updates for all version types
     "semanticCommitScope": "Flux Objects",
-    "pinDigests": false // Set to false to not pin digest references
-  },
+    "pinDigests": false, // Set to false to not pin digest references
   "branchPrefix": "flux-",
   "ignore": [
     // Add any global ignores here
   ],
   "requiredStatusChecks": null,
+  },
+
 }
