--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,7 +13,7 @@ builds:
       - amd64
       - arm64
     ldflags:
-      - -s -w -X github.com/truecharts/private/clustertool/cmd.version={{.Version}}  # Adjust path if necessary
+      - -s -w -X github.com/truecharts/public/clustertool/cmd.version={{.Version}}  # Adjust path if necessary
 archives:
   - name_template: "{{.ProjectName}}_{{ .Version }}_{{.Os}}_{{.Arch}}"
 checksum:
@@ -32,9 +32,17 @@ changelog:
 release:
   github:
     owner: truecharts
-    name: clustertool-public
+    name: public
   draft: true
   make_latest: false
+
+git:
+  tag_filter: '^Clustertool'
+
+universal_binaries:
+  - replace: true
+
+report_sizes: true
 
 before:
   hooks:
