--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -37,7 +37,8 @@ release:
   make_latest: false
 
 git:
-  tag_filter: '^Clustertool'
+  tag_filter: '^Clustertool-v'
+  strip_tag_prefix: 'Clustertool-'
 
 universal_binaries:
   - replace: true
