more renovate tweaks

--- a/.github/renovate/basics/commitMessage.json5
+++ b/.github/renovate/basics/commitMessage.json5
@@ -7,7 +7,8 @@
   "packageRules": [
     {
       "matchDatasources": ["docker", "helm-values"],
-      "commitMessageTopic": "OCI-image {{depName}}"
+      "commitMessageTopic": "OCI-image {{depName}}",
+      "prefix": "chore(container)"
     }
   ]
 }
