--- a/.github/renovate/kinds/helm.json5
+++ b/.github/renovate/kinds/helm.json5
@@ -10,6 +10,7 @@
     "versioning": "semver",
     "bumpVersion": true,
     "commitMessageTopic": "chart {{depName}}",
+    "prefix": "chore(helm-deps)",
     "updateTypes": ["major", "minor", "patch"], // Allow updates for all version types
     "pinDigests": false, // Set to false to not pin digest references
     "branchPrefix": "helm-",
