even more renovate tweaks

--- a/.github/renovate/kinds/helm-values.json5
+++ b/.github/renovate/kinds/helm-values.json5
@@ -13,8 +13,7 @@
     "semanticCommitScope": "container",
     "bumpVersion": true,
     "branchPrefix": "helm-values-",      // Moved to helm-values scope
-    "ignore": [
-    ],
-    "requiredStatusChecks": null        // Moved to helm-values scope
+    //"requiredStatusChecks": null        // Moved to helm-values scope
   }
+
 }
