--- a/.github/renovate/kinds/helm.json5
+++ b/.github/renovate/kinds/helm.json5
@@ -14,10 +14,7 @@
     "updateTypes": ["major", "minor", "patch"], // Allow updates for all version types
     "pinDigests": false, // Set to false to not pin digest references
     "branchPrefix": "helm-",
-    "requiredStatusChecks": null
+    //"requiredStatusChecks": null
   },
-  "ignore": [
-    // Add any global ignores here if needed
-  ],
 
 }
