--- a/.github/renovate/basics/labels.json5
+++ b/.github/renovate/basics/labels.json5
@@ -30,7 +30,7 @@
       "addLabels": ["renovate/container"]
     },
     {
-      "matchDatasources": ["helm"],
+      "matchDatasources": ["helmv3"],
       "addLabels": ["renovate/helm"]
     },
     {
