even more renovate work

--- a/.github/renovate/basics/commitMessage.json5
+++ b/.github/renovate/basics/commitMessage.json5
@@ -9,6 +9,11 @@
       "matchManagers": ["docker", "helm-values"],
       "commitMessageTopic": "OCI-image {{depName}}",
       "prefix": "chore(container)"
+    },
+    {
+      "matchManagers": ["helm"],
+      "commitMessageTopic": "chart {{depName}}",
+      "prefix": "chore(helm)"
     }
   ]
 }
