try splitting helm-release images and chart versions

--- a/.github/renovate/basics/commitMessage.json5
+++ b/.github/renovate/basics/commitMessage.json5
@@ -17,7 +17,14 @@
     },
     {
       "matchManagers": ["flux"],
-      "commitMessageTopic": "image/chart {{depName}}",
+      "matchPackagePatterns": ["!(.*/.*)"],
+      "commitMessageTopic": "chart {{depName}}",
+      "prefix": "chore(flux)"
+    },
+    {
+      "matchManagers": ["flux"],
+      "matchPackagePatterns": [".*/.*"],
+      "commitMessageTopic": "image {{depName}}",
       "prefix": "chore(flux)"
     },
     {
