Improve PR titles for renovate

--- a/.github/renovate/basics/commitMessage.json5
+++ b/.github/renovate/basics/commitMessage.json5
@@ -8,28 +8,33 @@
     {
       "matchManagers": ["helm-values"],
       "commitMessageTopic": "image {{depName}}",
+      "commitMessageExtra": "{{currentVersion}} → {{newVersion}}",
       "prefix": "chore(helm)"
     },
     {
       "matchManagers": ["docker"],
       "commitMessageTopic": "image {{depName}}",
+      "commitMessageExtra": "{{currentVersion}} → {{newVersion}}",
       "prefix": "chore(container)"
     },
     {
       "matchManagers": ["flux"],
       "matchPackagePatterns": ["!(.*/.*)"],
       "commitMessageTopic": "chart {{depName}}",
+      "commitMessageExtra": "{{currentVersion}} → {{newVersion}}",
       "prefix": "chore(flux)"
     },
     {
       "matchManagers": ["flux"],
       "matchPackagePatterns": [".*/.*"],
       "commitMessageTopic": "image {{depName}}",
+      "commitMessageExtra": "{{currentVersion}} → {{newVersion}}",
       "prefix": "chore(flux)"
     },
     {
       "matchManagers": ["helmv3"],
       "commitMessageTopic": "chart {{depName}}",
+      "commitMessageExtra": "{{currentVersion}} → {{newVersion}}",
       "prefix": "chore(helm)"
     }
   ]
